--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
     <enabled>true</enabled>
   </snapshots>
 </repository>
-<repositories>
+</repositories>
 
 <distributionManagement>
     <repository>
