--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
         </plugins>
     </build>
 
-         <distributionManagement>
+<!--          <distributionManagement>
     <repository>
       <id>maven-releases</id>
       <name>maven-releases</name>
@@ -184,7 +184,7 @@
       <name>maven-snapshots</name>
       <url>http://3.108.254.192:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
-</distributionManagement>
+</distributionManagement> -->
 
 
 </project>
